# OpenCQT

./: .doxygen  .gitignore  CMakeLists.txt  LICENSE  LICENSE.apache2  LICENSE.boost  LICENSE.bsd-3  LICENSE.zlib  a.exe.stackdump  azurepipelines.yml  conanfile.py  conanfile.txt  main.cpp  versioning.hpp  versioning.hpp.in
croquette/: CMakeLists.txt  cqt.cpp  cqt.hpp  uniprint.cpp  uniprint.hpp  versioning.hpp  versioning.hpp.in
croquette/src/: cqt.cpp  uniprint.cpp  uniprint.hpp  versioning.hpp  versioning.hpp.in
croquette/src/types/: ImplementationTypes.hpp
croquette/src/types/archetypes/: AnyArchetype.cpp  AnyArchetype.hpp  ArchetypeUtilities.cpp  ArchetypeUtilities.hpp  ArrayArchetype.cpp  ArrayArchetype.hpp  HashArchetype.cpp  HashArchetype.hpp  ReferenceArchetype.cpp  ReferenceArchetype.hpp  ScalarArchetype.cpp  ScalarArchetype.hpp
croquette/src/types/user_types/: CharacterScalarType.cpp  CharacterScalarType.hpp  ComplexArrayType.cpp  ComplexArrayType.hpp  EqualityOperators.cpp  EqualityOperators.hpp  FlatArrayType.cpp  (+7 more)
croquette/test/: CMakeLists.txt  Test_AnyArchetype.hpp  Test_ArchetypeUtils.hpp  Test_ArrayArchetype.hpp  Test_Casts.hpp  Test_HashArchetype.hpp  Test_ScalarArchetype.hpp  Test_Testing.hpp  Test_Version.hpp  testmain.cpp.in
croquette/types/: Archetype.cpp  Archetype.hpp  Archeutils.cpp  Archeutils.hpp  ArrayArchetype.cpp  ArrayArchetype.hpp  ImplementationTypes.hpp  ScalarArchetype.cpp  ScalarArchetype.hpp
croquette/types/archetypes/: AnyArchetype.cpp  AnyArchetype.hpp  ArchetypeUtilities.cpp  ArchetypeUtilities.hpp  ArrayArchetype.cpp  ArrayArchetype.hpp  HashArchetype.cpp  HashArchetype.hpp  ReferenceArchetype.cpp  ReferenceArchetype.hpp  ScalarArchetype.cpp  ScalarArchetype.hpp
croquette/types/user_types/: CharacterScalarType.cpp  CharacterScalarType.hpp  ComplexArrayType.cpp  ComplexArrayType.hpp  EqualityOperators.cpp  EqualityOperators.hpp  FlatArrayType.cpp  FlatArrayType.hpp  HashmapType.cpp  HashmapType.hpp  OrderedMapType.cpp  OrderedMapType.hpp  TrueScalarType.cpp  TrueScalarType.hpp
infoparse/: CMakeLists.txt  MatchResult.cpp  MatchResult.hpp  Option.hpp  OptionsParser.cpp  OptionsParser.hpp  ParameterHandler.cpp  ParameterHandler.hpp  ParseOptionEmptyException.cpp  ParseOptionEmptyException.hpp  ParseUnion.hpp  Parser.cpp  Parser.hpp  RawParseOption.cpp  RawParseOption.hpp  TypeInferingParameterHandler.cpp  TypeInferingParameterHandler.hpp  __Option.cpp  __Option.hpp  __OptionHandler.cpp  __OptionHandler.hpp  unless.hpp  utils.cpp  utils.hpp  versioning.hpp  versioning.hpp.in
infoparse/options/: FlagOption.cpp  FlagOption.hpp  ParseOption.hpp  ValueOption.hpp
starch/: AstCode.cpp  AstCode.hpp  AstInnerCode.cpp  AstInnerCode.hpp  AstNode.hpp  AstRoot.cpp  AstRoot.hpp  CMakeLists.txt  CondNode.cpp  CondNode.hpp  Utils.cpp.in  Utils.hpp  Visitable.hpp  Visitor.cpp  Visitor.hpp  main.cpp  starch.hpp  versioning.hpp.in
starch/algorithm/: XmlPrinter.cpp  XmlPrinter.hpp
starch/cexpr/: AdditionExpression.cpp  AdditionExpression.hpp  CExpression.cpp  CExpression.hpp  DivisionExpression.cpp  DivisionExpression.hpp  EqualityExpression.cpp  EqualityExpression.hpp  GreaterOrEqualExpression.cpp  GreaterOrEqualExpression.hpp  GreaterThanExpression.cpp  GreaterThanExpression.hpp  InequalityExpression.cpp  InequalityExpression.hpp  LessOrEqualExpression.cpp  LessOrEqualExpression.hpp  LessThanExpression.cpp  LessThanExpression.hpp  Makeable.cpp  Makeable.hpp  ModuloExpression.cpp  ModuloExpression.hpp  MultiplicationExpression.cpp  MultiplicationExpression.hpp  NegateExpression.cpp  NegateExpression.hpp  SubtractionExpression.cpp  SubtractionExpression.hpp  TernaryExpression.cpp  TernaryExpression.hpp  ValueExpression.cpp  ValueExpression.hpp
starch/cexpr/impl/: AdditionExpressionImpl.cpp  AdditionExpressionImpl.hpp  CExpressionImpl.hpp  DivisionExpressionImpl.cpp  DivisionExpressionImpl.hpp  GreaterOrEqualExpressionImpl.hpp  GreaterThanExpressionImpl.cpp  LessThanExpressionImpl.cpp  LessThanExpressionImpl.hpp  MultiplicationExpressionImpl.cpp  NegateExpressionImpl.hpp  SubtractionExpressionImpl.hpp  TernaryExpressionImpl.hpp  ValueExpressionImpl.cpp  ValueExpressionImpl.hpp
starch/codepart/: AstExtendedCodePart.hpp  AstOperation.cpp  AstOperation.hpp
starch/codepart/loop/: AstDoLoop.hpp  AstForLoop.hpp  AstLoop.hpp  AstWhileLoop.cpp  AstWhileLoop.hpp
starch/src/: AstCode.cpp  AstCode.hpp  AstInnerCode.cpp  AstInnerCode.hpp  AstNode.cpp  AstRoot.cpp  AstRoot.hpp  CondNode.cpp  CondNode.hpp  Utils.cpp.in  Utils.hpp  Visitable.cpp  Visitable.hpp  Visitor.hpp  main.cpp  versioning.hpp.in
starch/src/algorithm/: LitEval.cpp  LitEval.hpp  XmlPrinter.cpp  XmlPrinter.hpp
starch/src/cexpr/: AdditionExpression.cpp  AdditionExpression.hpp  CExpression.hpp  DivisionExpression.cpp  DivisionExpression.hpp  EqualityExpression.cpp  EqualityExpression.hpp  GreaterOrEqualExpression.cpp  GreaterOrEqualExpression.hpp  GreaterThanExpression.cpp  GreaterThanExpression.hpp  InequalityExpression.cpp  InequalityExpression.hpp  LessOrEqualExpression.cpp  LessOrEqualExpression.hpp  LessThanExpression.cpp  LessThanExpression.hpp  Makeable.hpp  ModuloExpression.cpp  ModuloExpression.hpp  MultiplicationExpression.cpp  MultiplicationExpression.hpp  NegateExpression.cpp  NegateExpression.hpp  SubtractionExpression.cpp  SubtractionExpression.hpp  TernaryExpression.cpp  TernaryExpression.hpp  ValueExpression.cpp  ValueExpression.hpp
starch/src/codepart/: AstCodePart.cpp  AstCodePart.hpp  AstExtendedCodePart.cpp  AstOperation.cpp  AstOperation.hpp
starch/src/utils/: Buildable.cpp  Buildable.hpp
starch/src/val_subtrees/: ValExpr.cpp  ValExpr.hpp  ValId.cpp  ValId.hpp  ValNode.cpp  ValNode.hpp  ValNumber.cpp  ValNumber.hpp  ValText.cpp  ValText.hpp
starch/test/: CMakeLists.txt  Test_CExpression.hpp  Test_Testing.hpp  Test_Utils.hpp  Test_ValSubtree.hpp  testmain.cpp.in
starch/utils/: load_libs.cmake  mktinyxml.cmake
starch/val_subtrees/: ValExpr.cpp  ValExpr.hpp  ValId.cpp  ValId.hpp  ValNode.hpp  ValNumber.cpp  ValNumber.hpp  ValText.cpp  ValText.hpp
(+62 files in other folders)
